Fixed some sonar issues, but mainly fixed the build process to finally produce code coverage also during hte integration test phase.