@@ -25,6 +25,23 @@
         </sonar.exclusions>
         <version.arquillian_core>1.1.3.Final</version.arquillian_core>
         <version.jacoco>0.7.2.201409121644</version.jacoco>
+        <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
+        <!-- The system property jacoco.outputDir needs to be override on the command line
+        with an absolute path if you want to merge results from all modules.
+        Example in a Jenkisn build where ${WORKSPACE} is defined and your project in the root directory of the workspace :
+        mvn clean install -Prun-its,coverage -Djacoco.outputDir=${WORKSPACE}/target
+        Note that unfortunately using the following does not work because of
+         
+        http://jira.codehaus.org/browse/SONAR-3427:
+         
+        <jacoco.outputDir>${session.executionRootDirectory}/target/</jacoco.outputDir>
+        -->
+        <jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
+        <!-- Jacoco output file for UTs -->
+        <jacoco.out.file>jacoco.exec</jacoco.out.file>
+        <!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
+        <sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.file}</sonar.jacoco.reportPath>
+        <argLine>-Xmx3g -Xms2g -XX:MaxPermSize=128m</argLine>
     </properties>
 
     <dependencies>
@@ -396,7 +413,10 @@
                                 <goals>
                                     <goal>prepare-agent</goal>
                                 </goals>
-                            </execution>
+                                <configuration>
+                                    <destFile>${sonar.jacoco.reportPath}</destFile>
+                                </configuration>
+                            </execution>                                   
                             <execution>
                                 <id>report</id>
                                 <phase>prepare-package</phase>
@@ -420,11 +440,6 @@
                                 <id>integration-test</id>
                                 <goals>
                                     <goal>integration-test</goal>
-                                </goals>
-                            </execution>
-                            <execution>
-                                <id>verify</id>
-                                <goals>
                                     <goal>verify</goal>
                                 </goals>
                             </execution>
